<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">

        <item
            android:id="@+id/language"
            app:showAsAction="ifRoom"
            android:title="@string/language_setting"
            android:icon="@drawable/ic_language"/>

        <item
            android:id="@+id/action_maps"
            android:title="@string/maps"
            app:showAsAction="ifRoom"
            android:icon="@drawable/baseline_map_24"/>


        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_logout"/>
    </group>
</menu>